# linuxProject2

./: CMakeCache.txt  CMakeLists.txt  Makefile  execution.cpp  execution.h  flightScanner.sh  func.cpp  header.h  main  main.cpp  main2  main2.cpp  mainClass.cpp  mainClass.h  utility.cpp  utility.h
efronCmake/: CMakeLists.txt  execution.h  func.cpp  main.cpp
flightDB/EGGW/: EGGW.arv  EGGW.dpt
flightDB/EGKK/: EGKK.arv  EGKK.dpt
flightDB/EGLL/: EGLL.arv  EGLL.dpt
flightDB/LLBG/: LLBG.arv  LLBG.dpt
